# mlsd

./: app.py  items_with_search_text.csv  pyproject.toml  requirements.txt
app_src/: README.md  app.py
