[project]
name = "mlsd-demo-app"
version = "0.1.0"
description = "demo code"
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "sentence-transformers (>=4.0.2,<5.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "accelerate (>=1.6.0,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"